<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="10dp">


    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/close_icon"
        android:tint="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_app_header"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/input_outline"
        android:backgroundTint="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/project_title"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <!--<ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rafael" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name_and_matric"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/supervisor"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="center"
                android:text="@string/dept"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="end"
                android:text="@string/month"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>