<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_margin="20dp"
    android:background="@color/colorPrimaryDark"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/input_outline"
        android:backgroundTint="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="FORGOT YOUR PASSWORD?"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:gravity="end"
                android:src="@drawable/close_icon" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/mail_icon"
                android:textSize="13sp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_outline"
            android:text="@string/reset"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/remember"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>